parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UNKNOWN

Grammar

Rule 0     S' -> texto
Rule 1     texto -> frase_presenteSimple texto
Rule 2     texto -> frase_presenteSimpleNeg texto
Rule 3     texto -> frase_pasadoSimple texto
Rule 4     texto -> frase_pasadoContinuo texto
Rule 5     texto -> frase_futurosimple texto
Rule 6     texto -> empty
Rule 7     frase_presenteSimple -> SUBJECT VERB_Spresent predicated
Rule 8     frase_presenteSimple -> SUBJECT VERB_Spresent predicated frase_presenteSimple
Rule 9     frase_presenteSimpleNeg -> SUBJECT AUXNEG VERB_Spresent predicated
Rule 10    frase_presenteSimpleNeg -> SUBJECT AUXNEG3 VERB_Spresent predicated
Rule 11    frase_pasadoContinuo -> SUBJECT VERB_pastToBe VERB_Contpast predicated
Rule 12    frase_pasadoSimple -> SUBJECT VERB_Spast predicated
Rule 13    frase_futurosimple -> SUBJECT VERB_FUTURO predicated
Rule 14    predicated -> WORDOPT predicated
Rule 15    predicated -> WORDOPT
Rule 16    WORDOPT -> WORD
Rule 17    WORDOPT -> empty
Rule 18    empty -> <empty>

Terminals, with rules where they appear

AUXNEG               : 9
AUXNEG3              : 10
SUBJECT              : 7 8 9 10 11 12 13
UNKNOWN              : 
VERB_Contpast        : 11
VERB_FUTURO          : 13
VERB_Spast           : 12
VERB_Spresent        : 7 8 9 10
VERB_pastToBe        : 11
WORD                 : 16
error                : 

Nonterminals, with rules where they appear

WORDOPT              : 14 15
empty                : 6 17
frase_futurosimple   : 5
frase_pasadoContinuo : 4
frase_pasadoSimple   : 3
frase_presenteSimple : 1 8
frase_presenteSimpleNeg : 2
predicated           : 7 8 9 10 11 12 13 14
texto                : 1 2 3 4 5 0

Parsing method: LALR

state 0

    (0) S' -> . texto
    (1) texto -> . frase_presenteSimple texto
    (2) texto -> . frase_presenteSimpleNeg texto
    (3) texto -> . frase_pasadoSimple texto
    (4) texto -> . frase_pasadoContinuo texto
    (5) texto -> . frase_futurosimple texto
    (6) texto -> . empty
    (7) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated
    (8) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated frase_presenteSimple
    (9) frase_presenteSimpleNeg -> . SUBJECT AUXNEG VERB_Spresent predicated
    (10) frase_presenteSimpleNeg -> . SUBJECT AUXNEG3 VERB_Spresent predicated
    (12) frase_pasadoSimple -> . SUBJECT VERB_Spast predicated
    (11) frase_pasadoContinuo -> . SUBJECT VERB_pastToBe VERB_Contpast predicated
    (13) frase_futurosimple -> . SUBJECT VERB_FUTURO predicated
    (18) empty -> .

    SUBJECT         shift and go to state 8
    $end            reduce using rule 18 (empty -> .)

    texto                          shift and go to state 1
    frase_presenteSimple           shift and go to state 2
    frase_presenteSimpleNeg        shift and go to state 3
    frase_pasadoSimple             shift and go to state 4
    frase_pasadoContinuo           shift and go to state 5
    frase_futurosimple             shift and go to state 6
    empty                          shift and go to state 7

state 1

    (0) S' -> texto .



state 2

    (1) texto -> frase_presenteSimple . texto
    (1) texto -> . frase_presenteSimple texto
    (2) texto -> . frase_presenteSimpleNeg texto
    (3) texto -> . frase_pasadoSimple texto
    (4) texto -> . frase_pasadoContinuo texto
    (5) texto -> . frase_futurosimple texto
    (6) texto -> . empty
    (7) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated
    (8) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated frase_presenteSimple
    (9) frase_presenteSimpleNeg -> . SUBJECT AUXNEG VERB_Spresent predicated
    (10) frase_presenteSimpleNeg -> . SUBJECT AUXNEG3 VERB_Spresent predicated
    (12) frase_pasadoSimple -> . SUBJECT VERB_Spast predicated
    (11) frase_pasadoContinuo -> . SUBJECT VERB_pastToBe VERB_Contpast predicated
    (13) frase_futurosimple -> . SUBJECT VERB_FUTURO predicated
    (18) empty -> .

    SUBJECT         shift and go to state 8
    $end            reduce using rule 18 (empty -> .)

    frase_presenteSimple           shift and go to state 2
    texto                          shift and go to state 9
    frase_presenteSimpleNeg        shift and go to state 3
    frase_pasadoSimple             shift and go to state 4
    frase_pasadoContinuo           shift and go to state 5
    frase_futurosimple             shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) texto -> frase_presenteSimpleNeg . texto
    (1) texto -> . frase_presenteSimple texto
    (2) texto -> . frase_presenteSimpleNeg texto
    (3) texto -> . frase_pasadoSimple texto
    (4) texto -> . frase_pasadoContinuo texto
    (5) texto -> . frase_futurosimple texto
    (6) texto -> . empty
    (7) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated
    (8) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated frase_presenteSimple
    (9) frase_presenteSimpleNeg -> . SUBJECT AUXNEG VERB_Spresent predicated
    (10) frase_presenteSimpleNeg -> . SUBJECT AUXNEG3 VERB_Spresent predicated
    (12) frase_pasadoSimple -> . SUBJECT VERB_Spast predicated
    (11) frase_pasadoContinuo -> . SUBJECT VERB_pastToBe VERB_Contpast predicated
    (13) frase_futurosimple -> . SUBJECT VERB_FUTURO predicated
    (18) empty -> .

    SUBJECT         shift and go to state 8
    $end            reduce using rule 18 (empty -> .)

    frase_presenteSimpleNeg        shift and go to state 3
    texto                          shift and go to state 10
    frase_presenteSimple           shift and go to state 2
    frase_pasadoSimple             shift and go to state 4
    frase_pasadoContinuo           shift and go to state 5
    frase_futurosimple             shift and go to state 6
    empty                          shift and go to state 7

state 4

    (3) texto -> frase_pasadoSimple . texto
    (1) texto -> . frase_presenteSimple texto
    (2) texto -> . frase_presenteSimpleNeg texto
    (3) texto -> . frase_pasadoSimple texto
    (4) texto -> . frase_pasadoContinuo texto
    (5) texto -> . frase_futurosimple texto
    (6) texto -> . empty
    (7) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated
    (8) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated frase_presenteSimple
    (9) frase_presenteSimpleNeg -> . SUBJECT AUXNEG VERB_Spresent predicated
    (10) frase_presenteSimpleNeg -> . SUBJECT AUXNEG3 VERB_Spresent predicated
    (12) frase_pasadoSimple -> . SUBJECT VERB_Spast predicated
    (11) frase_pasadoContinuo -> . SUBJECT VERB_pastToBe VERB_Contpast predicated
    (13) frase_futurosimple -> . SUBJECT VERB_FUTURO predicated
    (18) empty -> .

    SUBJECT         shift and go to state 8
    $end            reduce using rule 18 (empty -> .)

    frase_pasadoSimple             shift and go to state 4
    texto                          shift and go to state 11
    frase_presenteSimple           shift and go to state 2
    frase_presenteSimpleNeg        shift and go to state 3
    frase_pasadoContinuo           shift and go to state 5
    frase_futurosimple             shift and go to state 6
    empty                          shift and go to state 7

state 5

    (4) texto -> frase_pasadoContinuo . texto
    (1) texto -> . frase_presenteSimple texto
    (2) texto -> . frase_presenteSimpleNeg texto
    (3) texto -> . frase_pasadoSimple texto
    (4) texto -> . frase_pasadoContinuo texto
    (5) texto -> . frase_futurosimple texto
    (6) texto -> . empty
    (7) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated
    (8) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated frase_presenteSimple
    (9) frase_presenteSimpleNeg -> . SUBJECT AUXNEG VERB_Spresent predicated
    (10) frase_presenteSimpleNeg -> . SUBJECT AUXNEG3 VERB_Spresent predicated
    (12) frase_pasadoSimple -> . SUBJECT VERB_Spast predicated
    (11) frase_pasadoContinuo -> . SUBJECT VERB_pastToBe VERB_Contpast predicated
    (13) frase_futurosimple -> . SUBJECT VERB_FUTURO predicated
    (18) empty -> .

    SUBJECT         shift and go to state 8
    $end            reduce using rule 18 (empty -> .)

    frase_pasadoContinuo           shift and go to state 5
    texto                          shift and go to state 12
    frase_presenteSimple           shift and go to state 2
    frase_presenteSimpleNeg        shift and go to state 3
    frase_pasadoSimple             shift and go to state 4
    frase_futurosimple             shift and go to state 6
    empty                          shift and go to state 7

state 6

    (5) texto -> frase_futurosimple . texto
    (1) texto -> . frase_presenteSimple texto
    (2) texto -> . frase_presenteSimpleNeg texto
    (3) texto -> . frase_pasadoSimple texto
    (4) texto -> . frase_pasadoContinuo texto
    (5) texto -> . frase_futurosimple texto
    (6) texto -> . empty
    (7) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated
    (8) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated frase_presenteSimple
    (9) frase_presenteSimpleNeg -> . SUBJECT AUXNEG VERB_Spresent predicated
    (10) frase_presenteSimpleNeg -> . SUBJECT AUXNEG3 VERB_Spresent predicated
    (12) frase_pasadoSimple -> . SUBJECT VERB_Spast predicated
    (11) frase_pasadoContinuo -> . SUBJECT VERB_pastToBe VERB_Contpast predicated
    (13) frase_futurosimple -> . SUBJECT VERB_FUTURO predicated
    (18) empty -> .

    SUBJECT         shift and go to state 8
    $end            reduce using rule 18 (empty -> .)

    frase_futurosimple             shift and go to state 6
    texto                          shift and go to state 13
    frase_presenteSimple           shift and go to state 2
    frase_presenteSimpleNeg        shift and go to state 3
    frase_pasadoSimple             shift and go to state 4
    frase_pasadoContinuo           shift and go to state 5
    empty                          shift and go to state 7

state 7

    (6) texto -> empty .

    $end            reduce using rule 6 (texto -> empty .)


state 8

    (7) frase_presenteSimple -> SUBJECT . VERB_Spresent predicated
    (8) frase_presenteSimple -> SUBJECT . VERB_Spresent predicated frase_presenteSimple
    (9) frase_presenteSimpleNeg -> SUBJECT . AUXNEG VERB_Spresent predicated
    (10) frase_presenteSimpleNeg -> SUBJECT . AUXNEG3 VERB_Spresent predicated
    (12) frase_pasadoSimple -> SUBJECT . VERB_Spast predicated
    (11) frase_pasadoContinuo -> SUBJECT . VERB_pastToBe VERB_Contpast predicated
    (13) frase_futurosimple -> SUBJECT . VERB_FUTURO predicated

    VERB_Spresent   shift and go to state 14
    AUXNEG          shift and go to state 15
    AUXNEG3         shift and go to state 16
    VERB_Spast      shift and go to state 17
    VERB_pastToBe   shift and go to state 18
    VERB_FUTURO     shift and go to state 19


state 9

    (1) texto -> frase_presenteSimple texto .

    $end            reduce using rule 1 (texto -> frase_presenteSimple texto .)


state 10

    (2) texto -> frase_presenteSimpleNeg texto .

    $end            reduce using rule 2 (texto -> frase_presenteSimpleNeg texto .)


state 11

    (3) texto -> frase_pasadoSimple texto .

    $end            reduce using rule 3 (texto -> frase_pasadoSimple texto .)


state 12

    (4) texto -> frase_pasadoContinuo texto .

    $end            reduce using rule 4 (texto -> frase_pasadoContinuo texto .)


state 13

    (5) texto -> frase_futurosimple texto .

    $end            reduce using rule 5 (texto -> frase_futurosimple texto .)


state 14

    (7) frase_presenteSimple -> SUBJECT VERB_Spresent . predicated
    (8) frase_presenteSimple -> SUBJECT VERB_Spresent . predicated frase_presenteSimple
    (14) predicated -> . WORDOPT predicated
    (15) predicated -> . WORDOPT
    (16) WORDOPT -> . WORD
    (17) WORDOPT -> . empty
    (18) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
    WORD            shift and go to state 22
    SUBJECT         reduce using rule 18 (empty -> .)
    $end            reduce using rule 18 (empty -> .)

  ! WORD            [ reduce using rule 18 (empty -> .) ]

    predicated                     shift and go to state 20
    WORDOPT                        shift and go to state 21
    empty                          shift and go to state 23

state 15

    (9) frase_presenteSimpleNeg -> SUBJECT AUXNEG . VERB_Spresent predicated

    VERB_Spresent   shift and go to state 24


state 16

    (10) frase_presenteSimpleNeg -> SUBJECT AUXNEG3 . VERB_Spresent predicated

    VERB_Spresent   shift and go to state 25


state 17

    (12) frase_pasadoSimple -> SUBJECT VERB_Spast . predicated
    (14) predicated -> . WORDOPT predicated
    (15) predicated -> . WORDOPT
    (16) WORDOPT -> . WORD
    (17) WORDOPT -> . empty
    (18) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
    WORD            shift and go to state 22
    SUBJECT         reduce using rule 18 (empty -> .)
    $end            reduce using rule 18 (empty -> .)

  ! WORD            [ reduce using rule 18 (empty -> .) ]

    predicated                     shift and go to state 26
    WORDOPT                        shift and go to state 21
    empty                          shift and go to state 23

state 18

    (11) frase_pasadoContinuo -> SUBJECT VERB_pastToBe . VERB_Contpast predicated

    VERB_Contpast   shift and go to state 27


state 19

    (13) frase_futurosimple -> SUBJECT VERB_FUTURO . predicated
    (14) predicated -> . WORDOPT predicated
    (15) predicated -> . WORDOPT
    (16) WORDOPT -> . WORD
    (17) WORDOPT -> . empty
    (18) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
    WORD            shift and go to state 22
    SUBJECT         reduce using rule 18 (empty -> .)
    $end            reduce using rule 18 (empty -> .)

  ! WORD            [ reduce using rule 18 (empty -> .) ]

    predicated                     shift and go to state 28
    WORDOPT                        shift and go to state 21
    empty                          shift and go to state 23

state 20

    (7) frase_presenteSimple -> SUBJECT VERB_Spresent predicated .
    (8) frase_presenteSimple -> SUBJECT VERB_Spresent predicated . frase_presenteSimple
    (7) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated
    (8) frase_presenteSimple -> . SUBJECT VERB_Spresent predicated frase_presenteSimple

  ! shift/reduce conflict for SUBJECT resolved as shift
    $end            reduce using rule 7 (frase_presenteSimple -> SUBJECT VERB_Spresent predicated .)
    SUBJECT         shift and go to state 29

  ! SUBJECT         [ reduce using rule 7 (frase_presenteSimple -> SUBJECT VERB_Spresent predicated .) ]

    frase_presenteSimple           shift and go to state 30

state 21

    (14) predicated -> WORDOPT . predicated
    (15) predicated -> WORDOPT .
    (14) predicated -> . WORDOPT predicated
    (15) predicated -> . WORDOPT
    (16) WORDOPT -> . WORD
    (17) WORDOPT -> . empty
    (18) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
  ! reduce/reduce conflict for SUBJECT resolved using rule 15 (predicated -> WORDOPT .)
  ! reduce/reduce conflict for $end resolved using rule 15 (predicated -> WORDOPT .)
    SUBJECT         reduce using rule 15 (predicated -> WORDOPT .)
    $end            reduce using rule 15 (predicated -> WORDOPT .)
    WORD            shift and go to state 22

  ! WORD            [ reduce using rule 18 (empty -> .) ]
  ! SUBJECT         [ reduce using rule 18 (empty -> .) ]
  ! $end            [ reduce using rule 18 (empty -> .) ]

    WORDOPT                        shift and go to state 21
    predicated                     shift and go to state 31
    empty                          shift and go to state 23

state 22

    (16) WORDOPT -> WORD .

    WORD            reduce using rule 16 (WORDOPT -> WORD .)
    SUBJECT         reduce using rule 16 (WORDOPT -> WORD .)
    $end            reduce using rule 16 (WORDOPT -> WORD .)


state 23

    (17) WORDOPT -> empty .

    WORD            reduce using rule 17 (WORDOPT -> empty .)
    SUBJECT         reduce using rule 17 (WORDOPT -> empty .)
    $end            reduce using rule 17 (WORDOPT -> empty .)


state 24

    (9) frase_presenteSimpleNeg -> SUBJECT AUXNEG VERB_Spresent . predicated
    (14) predicated -> . WORDOPT predicated
    (15) predicated -> . WORDOPT
    (16) WORDOPT -> . WORD
    (17) WORDOPT -> . empty
    (18) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
    WORD            shift and go to state 22
    SUBJECT         reduce using rule 18 (empty -> .)
    $end            reduce using rule 18 (empty -> .)

  ! WORD            [ reduce using rule 18 (empty -> .) ]

    predicated                     shift and go to state 32
    WORDOPT                        shift and go to state 21
    empty                          shift and go to state 23

state 25

    (10) frase_presenteSimpleNeg -> SUBJECT AUXNEG3 VERB_Spresent . predicated
    (14) predicated -> . WORDOPT predicated
    (15) predicated -> . WORDOPT
    (16) WORDOPT -> . WORD
    (17) WORDOPT -> . empty
    (18) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
    WORD            shift and go to state 22
    SUBJECT         reduce using rule 18 (empty -> .)
    $end            reduce using rule 18 (empty -> .)

  ! WORD            [ reduce using rule 18 (empty -> .) ]

    predicated                     shift and go to state 33
    WORDOPT                        shift and go to state 21
    empty                          shift and go to state 23

state 26

    (12) frase_pasadoSimple -> SUBJECT VERB_Spast predicated .

    SUBJECT         reduce using rule 12 (frase_pasadoSimple -> SUBJECT VERB_Spast predicated .)
    $end            reduce using rule 12 (frase_pasadoSimple -> SUBJECT VERB_Spast predicated .)


state 27

    (11) frase_pasadoContinuo -> SUBJECT VERB_pastToBe VERB_Contpast . predicated
    (14) predicated -> . WORDOPT predicated
    (15) predicated -> . WORDOPT
    (16) WORDOPT -> . WORD
    (17) WORDOPT -> . empty
    (18) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
    WORD            shift and go to state 22
    SUBJECT         reduce using rule 18 (empty -> .)
    $end            reduce using rule 18 (empty -> .)

  ! WORD            [ reduce using rule 18 (empty -> .) ]

    predicated                     shift and go to state 34
    WORDOPT                        shift and go to state 21
    empty                          shift and go to state 23

state 28

    (13) frase_futurosimple -> SUBJECT VERB_FUTURO predicated .

    SUBJECT         reduce using rule 13 (frase_futurosimple -> SUBJECT VERB_FUTURO predicated .)
    $end            reduce using rule 13 (frase_futurosimple -> SUBJECT VERB_FUTURO predicated .)


state 29

    (7) frase_presenteSimple -> SUBJECT . VERB_Spresent predicated
    (8) frase_presenteSimple -> SUBJECT . VERB_Spresent predicated frase_presenteSimple

    VERB_Spresent   shift and go to state 14


state 30

    (8) frase_presenteSimple -> SUBJECT VERB_Spresent predicated frase_presenteSimple .

    SUBJECT         reduce using rule 8 (frase_presenteSimple -> SUBJECT VERB_Spresent predicated frase_presenteSimple .)
    $end            reduce using rule 8 (frase_presenteSimple -> SUBJECT VERB_Spresent predicated frase_presenteSimple .)


state 31

    (14) predicated -> WORDOPT predicated .

    SUBJECT         reduce using rule 14 (predicated -> WORDOPT predicated .)
    $end            reduce using rule 14 (predicated -> WORDOPT predicated .)


state 32

    (9) frase_presenteSimpleNeg -> SUBJECT AUXNEG VERB_Spresent predicated .

    SUBJECT         reduce using rule 9 (frase_presenteSimpleNeg -> SUBJECT AUXNEG VERB_Spresent predicated .)
    $end            reduce using rule 9 (frase_presenteSimpleNeg -> SUBJECT AUXNEG VERB_Spresent predicated .)


state 33

    (10) frase_presenteSimpleNeg -> SUBJECT AUXNEG3 VERB_Spresent predicated .

    SUBJECT         reduce using rule 10 (frase_presenteSimpleNeg -> SUBJECT AUXNEG3 VERB_Spresent predicated .)
    $end            reduce using rule 10 (frase_presenteSimpleNeg -> SUBJECT AUXNEG3 VERB_Spresent predicated .)


state 34

    (11) frase_pasadoContinuo -> SUBJECT VERB_pastToBe VERB_Contpast predicated .

    SUBJECT         reduce using rule 11 (frase_pasadoContinuo -> SUBJECT VERB_pastToBe VERB_Contpast predicated .)
    $end            reduce using rule 11 (frase_pasadoContinuo -> SUBJECT VERB_pastToBe VERB_Contpast predicated .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for WORD in state 14 resolved as shift
WARNING: shift/reduce conflict for WORD in state 17 resolved as shift
WARNING: shift/reduce conflict for WORD in state 19 resolved as shift
WARNING: shift/reduce conflict for SUBJECT in state 20 resolved as shift
WARNING: shift/reduce conflict for WORD in state 21 resolved as shift
WARNING: shift/reduce conflict for WORD in state 24 resolved as shift
WARNING: shift/reduce conflict for WORD in state 25 resolved as shift
WARNING: shift/reduce conflict for WORD in state 27 resolved as shift
WARNING: reduce/reduce conflict in state 21 resolved using rule (predicated -> WORDOPT)
WARNING: rejected rule (empty -> <empty>) in state 21
